--- a/style.css
+++ b/style.css
@@ -83,4 +83,33 @@ color: white;
 .trusted{
     text-align: center;
     padding: 10px;
+    color: #FFFFFF;
+}
+.num{
+    font-size: 2rem;
+}
+.black_div_Img{
+    filter: grayscale();
+    margin: 20px;
+}
+/* About DIV STYLING */
+.who{
+font-family: Lato;
+font-size: 1rem;
+font-weight: 400;
+line-height: 14.4px;
+padding: 15px;
+}
+.about_us{
+text-transform: capitalize;
+font-weight: bold;
+font-size: 2rem;
+ padding: 14px;
+}
+.about_paragraph{
+    padding: 15px;
+}
+.innerDiv_img{
+    height: 50px;
+    width: 50px;
 }
