--- a/style.css
+++ b/style.css
@@ -158,3 +158,23 @@ height: 600px;
 width:600px;
 margin: 20px;
 }
+/* GRID STYLING */
+.grid_Container{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+}
+.grid_card{
+    box-shadow: 2px 2px 2px 2px #0000002a;
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+}
+.grid_Img{
+    height: 50px;
+    width: 50px;
+}
+.grid_Text{
+margin-top: 10px;
+text-transform: capitalize;
+border-radius: 10px;
+}
