--- a/style.css
+++ b/style.css
@@ -194,3 +194,66 @@ border-radius: 10px;
 .mapped_container_P{
     margin: 10px;
 }
+.our{
+    /* //styleName: Body Small; */
+font-family: Lato;
+font-size: 1.5rem;
+font-weight: 400;
+line-height: 14.4px;
+margin: 20px;
+text-align: center;
+}
+.services_title{
+    font-family: Lato;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 14.4px;
+    margin: 25px;
+    text-align: center;
+    text-transform: uppercase;
+}
+.three_divs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.three_divs_img{
+    height: 300px;
+     width: 300px;
+}
+.div_card{
+margin: 20px;
+background-color: #E7EBEF;
+;
+
+}
+.bottom_div{
+    background-color:  #26272B;
+    padding: 20px;
+}
+.small_img{
+    position: relative;
+    bottom: 35px;
+    left: 110px;
+    height: 50px;
+    width: 50px;
+}
+.title{
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: center;
+    text-transform: capitalize;
+    color: white;
+}
+.div_card_P{
+    text-align: center;
+font-family: Lato;
+font-size: 20px;
+font-weight: 400;
+line-height: 26px;
+text-align: center;
+color: white;
+}
