--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ color: white;
     display: grid;
     grid-template-columns: repeat(3 , 1fr);
     text-align: center;
+    margin-top: 50px;
 }
 .goal_Boxes{
     margin: 20px;
@@ -296,4 +297,39 @@ color: white;
 }
 .inner_goal_boxes:hover{
     background-color: #E2F6E7;
+}
+.Oil_rig{
+    background-image: linear-gradient(
+        #00000075,
+        #00000075) , url("./Assets//OIL_Rig.jpeg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        padding: 250px;
+        margin: 50px;
+}
+.Oil_Title{
+font-family: Lato;
+font-size: 56px;
+font-weight: 400;
+line-height: 64px;
+text-align: center;
+text-align: center;
+color: white;
+}
+.oil_title{
+    text-align: center;
+    color: white;
+    padding: 10px;
+}
+.Oil_Btn{
+    width: 180px;
+    background-color: #37C760;
+    color: white;
+    padding: 10px;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    text-transform: capitalize;
+    transform: translateX(290px);
 }
