--- a/style.css
+++ b/style.css
@@ -333,3 +333,82 @@ color: white;
     text-transform: capitalize;
     transform: translateX(290px);
 }
+
+footer{
+    padding: 50px;
+    background-image: linear-gradient( to right,#26272B, #0C153C);
+}
+.signUp{
+    margin: 20px;
+    color: #FFFFFF;
+}
+input{
+    border: none;
+    outline: none;
+    padding: 10px;
+    width: 420px;
+}
+form{
+    margin: 20px;
+}
+.footer_BTn{
+    background-color: #37C760;
+    color: white;
+    padding: 10px;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    text-transform: capitalize;
+    margin-top: 10px;
+    width: 180px;
+}
+.form_p{
+    margin-bottom: 10px;
+    font-weight: bolder;
+    font-size: 1rem;
+    color: #fff;;
+}
+.footer_first_div{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid #756A6A;
+}
+.div_1{
+    margin-top: 130px;
+}
+.footer_down_div{
+    display: flex;
+    justify-content: space-evenly;
+    border-bottom: 2px solid  #756A6A;
+    padding: 30px;
+}
+.footer_down_card{
+    margin-top: 30px;
+  
+}
+.footer_down_div_title{
+    font-size: 1.3rem;
+    color: white;
+    text-transform: capitalize;
+}
+.footer_down_div_paragraph{
+    margin-top: 20px;
+    color: white;
+}
+.Footer_Logo{
+    font-family: Lato;
+    font-size: 2.5rem;
+    font-weight: 00;
+    line-height: 44px;
+    color: #37C760;
+    font-family: sans-serif;  
+}
+.lastwords{
+    font-family: Sans Serif Collection;
+    font-size: 16px;
+    font-weight: 400;
+    color: white;
+    font-size: 1.4rem;
+    padding: 20px;
+    text-transform: capitalize;
+}
